# CUDA-Planesweep

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  PlaneSweep  readme.md
doc/: optimization_notes.md
kernels/: cuda_utils.cu  cuda_utils.cuh  device_types.cuh  kernel.cu  kernel.cuh  main.cu  main.cuh
src/: cam_params.cpp  cam_params.hpp  constants.hpp  main.cpp
